implement update bulk and atomic operations
