# lib/units/api/controllers/teams.js
@@ -36,6 +36,14 @@ async function createTeam(req, res) {
 }
 
 async function updateTeam(req, res) {
+    return groupBulkOperations(req, res, 'update')
+}
+
+async function removeFromTeam(req, res) {
+    return groupBulkOperations(req, res, 'delete')
+}
+
+async function groupBulkOperations(req, res, operation) {
     const teamId = req.params.id
     let users = req.body.users
     let groups = req.body.groups
@@ -53,11 +61,21 @@ async function updateTeam(req, res) {
         groups = []
     }
 
-    for (const user of users) {
-        await dbapi.addUserToTeam(teamId, user)
+    if (operation === 'update') {
+        for (const user of users) {
+            await dbapi.addUserToTeam(teamId, user)
+        }
+        for (const group of groups) {
+            await dbapi.addGroupToTeam(teamId, group)
+        }
     }
-    for (const group of groups) {
-        await dbapi.addGroupToTeam(teamId, group)
+    if (operation === 'delete') {
+        for (const user of users) {
+            await dbapi.removeUserFromTeam(teamId, user)
+        }
+        for (const group of groups) {
+            await dbapi.removeGroupFromTeam(teamId, group)
+        }
     }
 
     if (name) {
@@ -68,10 +86,32 @@ async function updateTeam(req, res) {
     apiutil.respond(res, 200, 'Team info', {team: publishTeam(team)})
 }
 
+async function removeUserFromTeam(req, res) {
+    const teamId = req.params.id
+    const email = req.params.email
 
-export {getTeamById, createTeam, updateTeam}
+    await dbapi.removeUserFromTeam(teamId, email)
+
+    const team = await dbapi.getTeamById(teamId)
+    apiutil.respond(res, 200, 'Team info', {team: publishTeam(team)})
+}
+
+async function removeGroupFromTeam(req, res) {
+    const teamId = req.params.id
+    const group = req.params.group
+
+    await dbapi.removeGroupFromTeam(teamId, group)
+
+    const team = await dbapi.getTeamById(teamId)
+    apiutil.respond(res, 200, 'Team info', {team: publishTeam(team)})
+}
+
+export {getTeamById, createTeam, updateTeam, removeFromTeam, removeUserFromTeam, removeGroupFromTeam}
 export default {
     getTeamById: getTeamById,
     createTeam: createTeam,
     updateTeam: updateTeam,
+    removeFromTeam: removeFromTeam,
+    removeUserFromTeam: removeUserFromTeam,
+    removeGroupFromTeam: removeGroupFromTeam,
 }
